Feat: API for stats and levels based on quest rewards
